Fix overflow on HTML example

--- a/gh-pages/css/styles.scss
+++ b/gh-pages/css/styles.scss
@@ -73,7 +73,7 @@ body {
         padding: 8px;
         box-sizing: border-box;
         max-width: 100%;
-        overflow: scroll;
+        overflow: auto;
     }
     p code, li code {
         display: inline-block;
